# Nabla-AI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.railway  README.md  docker-compose.yml  railway.json
.github/workflows/: ci.yml
backend/: .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  ai.py  analysis.py  config.py  fields.py  ipc.py  jobs.py  main.py  models.py  services.py  slices.py
backend/app/routers/: ai.py  health.py  postproc.py  runs.py  simulations.py
backend/app/storage/: __init__.py  base.py  filesystem.py  sqlite.py
backend/tests/: stub_solver.py  test_adaptive_runs.py  test_ai.py  test_health.py  test_ipc.py  test_lifecycle.py  test_postproc.py  test_storage.py
core/: .gitignore  CMakeLists.txt  README.md
core/apps/nabla_mesh_demo/: main.cpp
core/apps/nabla_solve/: main.cpp
core/cmake/: version.hpp.in
core/examples/: cube.stl  cube_case.json
core/include/nabla/: config.hpp  field.hpp  io.hpp  solver.hpp
core/include/nabla/adaptive/: adaptive.hpp  run.hpp
core/include/nabla/flow/: case.hpp  grid.hpp  ns_solver.hpp  octree_poisson.hpp  poisson.hpp
core/include/nabla/geometry/: classify.hpp  features.hpp  geometry_report.hpp  ingest.hpp  solid_geometry.hpp  stl_reader.hpp  trimesh.hpp
core/include/nabla/io/: checkpoint.hpp  json.hpp  vtu_writer.hpp
core/include/nabla/mesh/: morton.hpp  octree.hpp
core/src/: field.cpp  io.cpp  solver.cpp
core/src/adaptive/: adaptive_core.cpp  audit.cpp  run.cpp  transport.cpp
core/src/flow/: case.cpp  multigrid.cpp  ns_solver.cpp  octree_poisson.cpp  poisson.cpp
core/src/geometry/: classify.cpp  features.cpp  geometry_report.cpp  ingest.cpp  solid_geometry.cpp  stl_reader.cpp
core/src/io/: checkpoint.cpp  vtu_writer.cpp
core/src/mesh/: octree.cpp
core/tests/: CMakeLists.txt  test_adaptive.cpp  test_checkpoint.cpp  test_features.cpp  test_field.cpp  test_flow.cpp  test_geometry.cpp  test_io.cpp  test_json.cpp  test_morton.cpp  test_octree.cpp  test_octree_poisson.cpp  test_solver.cpp  test_stl.cpp
docker/: backend.Dockerfile  core.Dockerfile  frontend.Dockerfile  nginx.conf
docs/: README.md
docs/adr/: 0001-local-first-client-server-architecture.md  0002-octree-from-scratch.md  0003-baseline-ns-solver.md  0004-adaptive-layer.md  0005-backend-orchestration-and-storage.md  0006-containerized-deployment.md  0007-octree-geometric-multigrid-pressure-solver.md  0008-octree-native-flow-solve.md  README.md  template.md
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  config.ts  index.css  main.tsx  router.tsx  vite-env.d.ts  vtk-shims.d.ts
frontend/src/components/: CopilotBar.tsx  ExperimentCardForm.tsx  TopBar.tsx  UploadDropzone.tsx  Viewport3D.tsx
frontend/src/components/panels/: FluidPanel.tsx  NumericsPanel.tsx  OutputsPanel.tsx  ReportPanel.tsx
frontend/src/components/post/: ExportsView.tsx  FlowFieldView.tsx  ForcesView.tsx  RecommendationsPanel.tsx  VortexView.tsx  vtkUtils.ts
frontend/src/components/sim/: AuditFeed.tsx  ChartPanel.tsx  FidelityMap.tsx
frontend/src/hooks/: useTelemetry.ts
frontend/src/routes/: Post.tsx  Pre.tsx  Sim.tsx
frontend/src/state/: RunContext.tsx
scripts/: README.md  build-core.sh  demo.sh  dev.sh
validation/: .gitignore  README.md  __init__.py  compare.py  generate_report.py  make_report.py  run_ladder.py
validation/cases/: coarse_box.spec  diffusion_box.spec
validation/flow/: cavity_re100.json  channel_poiseuille.json  ghia_re100_u.csv  validate_flow.py
validation/postproc/: __init__.py  audit.py  compare_ref.py  diagnostics.py  meanfield.py  qcrit.py  recirculation.py  spectra.py  svg.py  vtu.py  walls.py
validation/reference/: coarse_box.expected  diffusion_box.expected
validation/reference/wall_mounted_cube/: README.md  sources.csv
validation/reference/wall_mounted_cube/re1000/: metrics.csv
validation/reference/wall_mounted_cube/re1000/profiles/: u_profile_xrel_0.5.csv  u_profile_xrel_4.0.csv
validation/reference/wall_mounted_cube/re1700/profiles/: u_profile_xrel_1.5.csv  u_profile_xrel_2.5.csv
validation/reference/wall_mounted_cube/re3000/profiles/: u_profile_xrel_-1.0.csv
validation/tests/: test_postproc.py
